src/app/rateandservices/page.module.css
.rateservice_grid {
  grid-template-rows: 0.4fr 1.5fr;
  grid-template-columns: 1fr;
  grid-template-areas: "rate rate" "services services";
}

.rateservice_rate {
  grid-area: rate;
  display: flex;

  div {
    margin-right: 1rem;

    h4 {
      margin-bottom: 1rem;
    }
  }

  @media (max-width: $mantine-breakpoint-sm) {
    display: block;

    div {
      margin-bottom: 1rem;
    }
  }
}

.rateservice_services {
  grid-area: services;
  display: grid;
  text-align: center;
  grid-template-columns: 1fr 1fr 1fr;
  grid-template-rows: 0.1fr 0.1fr 4fr;
  grid-template-areas: "serv-heading serv-heading serv-heading" "serv-preamble serv-preamble serv-preamble" "serv-list_1 serv-list_2 serv-list_3";
  column-gap: 1rem;

  h4 {
    grid-area: serv-heading;
    margin-bottom: 1rem;
  }

  p {
    grid-area: serv-preamble;
    margin-bottom: 1rem;
  }

  @media (max-width: $mantine-breakpoint-sm) {
    grid-template-columns: 1fr;
    grid-template-rows: 0.1fr 0.1fr 1fr 1fr 1fr;
    grid-template-areas: "serv-heading" "serv-preamble" "serv-list_1" "serv-list_2" "serv-list_3";
    gap: 1rem 0;
  }
}

